--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,48 @@
+// PALETTE
 $primary: #ff006a;
 $secondary: #9000ff;
+
 $black: #000;
 $gray: #292929;
+$white: #f9f9f9;
+
 $green: #a2ff86;
 $red: #d71313;
+
+$palette: (
+  'primary': $primary,
+  'secondary': $secondary,
+  'black': $black,
+  'gray': $gray,
+  'white': $white,
+  'green': $green,
+  'red': $red,
+);
+
+// SIZING
+$sizes: 0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 24, 28, 30, 34, 38, 40, 44, 48,
+  50, 60, 70, 80, 90, 100;
+
+$ratios: (
+  '100': 100%,
+  '75': 75%,
+  '50': 50%,
+  '25': 25%,
+);
+
+// PROPERTIES ALIASES
+$props: (
+  'gap': 'g',
+  'margin': 'm',
+  'padding': 'p',
+);
+
+// TEXT
+$font-weights: (
+  'light': 200,
+  'medium': 500,
+  'bold': 700,
+);
 
 // MEDIA QUERY
 $laptop: 1024px;
